networkmanager: Show zone in Interfaces list

--- a/pkg/networkmanager/index.html
+++ b/pkg/networkmanager/index.html
@@ -95,6 +95,7 @@
           <tr>
             <th translatable="yes">Name</th>
             <th translatable="yes">IP Address</th>
+            <th translatable="yes">Zone</th>
             <th translatable="yes" class="networking-speed">Sending</th>
             <th translatable="yes" class="networking-speed">Receiving</th>
           </tr>
@@ -113,6 +114,7 @@
           <tr>
             <th translatable="yes">Name</th>
             <th translatable="yes">IP Address</th>
+            <th translatable="yes">Zone</th>
             <th translatable="yes" class="networking-speed">Sending</th>
             <th translatable="yes" class="networking-speed">Receiving</th>
           </tr>
