Hide panel when there's nothing to be shown hidding and showing the network-interface-slaves panel is already done on javascript, but when the interface is unavailable the panel will be shown but only with the headers

--- a/pkg/networkmanager/index.html
+++ b/pkg/networkmanager/index.html
@@ -582,7 +582,7 @@
         </table>
       </div>
     </div>
-    <div class="panel panel-default" id="network-interface-slaves">
+    <div class="panel panel-default" id="network-interface-slaves" hidden>
       <table class="table table-hover">
         <thead>
           <tr>
