--- a/pkg/welder/index.html
+++ b/pkg/welder/index.html
@@ -7,16 +7,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="stylesheet" href="./css/patternfly.min.css">
-    <link rel="stylesheet" href="./css/patternfly-additions.min.css">
-    <link rel="stylesheet" href="./custom.css">
+    <link href="../base1/patternfly.css" type="text/css" rel="stylesheet">
+    <!-- not being used? <link rel="stylesheet" href="./css/patternfly-additions.min.css"> -->
+    <link rel="stylesheet" href="./welder.css">
 
     <!-- js dependencies -->
     <script src="../base1/jquery.js"></script>
     <!-- <script src="dist/jquery.matchHeight-min.js"></script> -->
     <script type="text/javascript" src="../base1/cockpit.js"></script>
-    <script src="dist/webcomponents-lite.js"></script>
-    <script src="dist/native-shim.js"></script>
+    <script src="./webcomponents-lite.js"></script>
+    <script src="./native-shim.js"></script>
     <script src="./js/config.js"></script>
   </head>
   <body>
